# personal-assistant-agent-harness

./: .dockerignore  .env.example  .gitignore  .waza.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  FLOW-SPEC.md  README.md  api_auth.py  app.py  artifact_store.py  auth_users.py  content_processing.py  dev.py  docker-compose.yml  identity_config.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  scheduler.py  session_manager.py
.claude/: communication.md  settings.json
developer-harness/: README.md
docs/: README.md  agent-evals-reference.md  architecture.md  coding-agent-setup.md  context-reference-architecture.md  crud-reference-architecture.md  deployment.md  design.md  development.md  engagements.md  environments.md  evals-reference-architecture.md  evidence.md  manifesto.md  mvp-requirements.md  navigation-reference-architecture.md  personalized-navigation-via-user-context.md  projects-spec.md  requirements.md  roadmap.md  session-state-design.md  spec.md  use-cases.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pw_m1_check.mjs  pw_m2_check.mjs  tsconfig.contract.json
infra/: acr-roles.bicep  apps.bicep  deploy.sh  entra.py  foundation.bicep  governance_nsg.py  openai-role.bicep  platform.bicep
review/: 2026-07-19-use-cases-draft-from-flow.md  aca-state-test.md
scripts/: adversarial_audit.mjs  adversarial_verify.mjs  api_probe.py  auth_probe.py  check_single_step.mjs  csa_audit.mjs  deploy_dev_env.sh  dispatch_reminders.py  engagement_domain_smoke.py  engagements_db_smoke.py  engagements_e2e.mjs  engagements_ui_e2e.mjs  eval_publish.sh  flow_cosmos_e2e.mjs  flow_library_compare_e2e.mjs  flow_library_e2e.mjs  flow_library_rag_e2e.mjs  flow_routes_e2e.mjs  manual_crud_e2e.mjs  mvp_agent_eval.mjs  mvp_eval_manifest.mjs  mvp_evidence.mjs  mvp_judge.mjs  mvp_playwright.mjs  mvp_scorecard.mjs  mvp_scorecard_history.mjs  mvp_scorecard_merge.mjs  navsvc_checks.py  projects_e2e.mjs  reset_demo_state.py  review_ux.mjs  ui_capture.mjs  verify.sh  verify_rename.mjs  waza_eval.sh  weekly_review_e2e.mjs
session-container/: Dockerfile  agent.py  agent_deepagents.py  appdb.py  library.py  mvp_tool_schemas.py  navsvc.py  pyproject.toml  server.py  skill_runtime.py  tracing.py  workload_auth.py
session-container/product-skills/calendar/: SKILL.md
session-container/product-skills/engagement-meeting-prep/: SKILL.md
session-container/product-skills/tasks/: SKILL.md
session-container/product-skills/weekly-review/: SKILL.md
session-container/skills/weekly-review/: SKILL.md
tests/: mvp_evidence.test.mjs  mvp_scorecard_history.test.mjs  mvp_workflow_evidence.test.mjs  test_dev_launcher.py  test_engagement_core.py  test_identity_modes.py  test_infra_entra_contract.py  test_local_quality.py  test_personal_workspace.py  test_release_boundaries.py  test_reminder_dispatch.py  test_reset_demo_state.py  test_skill_runtime.py  test_structured_control.py
workbench_core/: __init__.py  acs_email.py  appdb_repository.py  engagement_results.py  engagements.py  personal_repository.py  (+6 more)
(+131 files in other folders)
