[project]
name = "flow-session"
version = "0.1.0"
description = "Session container for the Flow agent — one instance per user"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-protocol>=0.1.13",
    "aiohttp>=3.11.0",
    "azure-ai-contentunderstanding>=1.0.0",
    "azure-cosmos>=4.16.1",
    "azure-identity>=1.25.2",
    "azure-storage-file-datalake>=12.23.0",
    "fastapi>=0.133.0",
    "github-copilot-sdk>=1.0.1",
    "mcp>=1.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.41.0",
]

[project.optional-dependencies]
tracing = [
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "azure-monitor-opentelemetry>=1.6.0",
]
