[project]
name = "csa-workbench-session"
version = "0.1.0"
description = "Session container for the CSA Workbench agent — one instance per user"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-protocol>=0.1.13",
    # aiohttp is not imported directly: it is the transport azure-core loads at
    # runtime for the azure.identity.aio credential in both agent adapters.
    "aiohttp>=3.11.0",
    "azure-cosmos>=4.16.1",
    "azure-identity>=1.25.2",
    "deepagents>=0.6.11",
    "fastapi>=0.133.0",
    "github-copilot-sdk>=1.0.1",
    "langchain-openai>=1.3.3",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.41.0",
]

[project.optional-dependencies]
tracing = [
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "azure-monitor-opentelemetry>=1.6.0",
]
